--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -54,8 +54,8 @@
 
 
     -# FlowbiteJS
-    %link{href: "https://unpkg.com/flowbite@latest/dist/flowbite.css", rel: "stylesheet"}
-    %script{async: "", src: "https://unpkg.com/browse/flowbite@2.4.1/dist/flowbite.js"}
+    %link{href: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.css", rel: "stylesheet"}
+    %script{async: "", src: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.js"}
 
   %body{class: "bg-stone-100", id: "main", "data-controller": "landing--index"}
     %navigation{class: ""}
