--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -57,6 +57,11 @@
     %link{href: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.css", rel: "stylesheet"}
     %script{async: "", src: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.js"}
 
+    -# Chart.js
+    %script{async: "", src: "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js",
+            integrity: "sha512-L0Shl7nXXzIlBSUUPpxrokqq4ojqgZFQczTYlGjzONGTDAcLremjwaWv5A+EDLnxhQzY5xUZPWLOLqYRkY0Cbw==",
+            crossorigin: "anonymous", referrerpolicy: "no-referrer"}
+
   %body{class: "bg-stone-100", id: "main", "data-controller": "landing--index"}
     %navigation{class: ""}
       = render "shared/navigation"
@@ -111,3 +116,6 @@
             integrity: "sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==",
             referrerpolicy: "no-referrer",
             src: "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"}
+    %script{async: "", src: "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js",
+            integrity: "sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==",
+            crossorigin: "anonymous", referrerpolicy: "no-referrer"}
