--- a/app/views/shared/_1_hero_section.html.haml
+++ b/app/views/shared/_1_hero_section.html.haml
@@ -1,4 +1,4 @@
-%section{class: "h-screen py-3 sm:py-6 sm:mt-2 md:mt-4 lg:mt-6 xl:mt-8"}
+%section{class: "py-3 sm:py-6 sm:mt-2 md:mt-4 lg:mt-6 xl:mt-8 mb-30 md:mb-24"}
   %div{class: "relative flex flex-col items-center mx-auto lg:flex-row-reverse lg:max-w-5xl lg:mt-8 xl:max-w-7xl"}
     %div{class: "animate__animated animate__slideInLeft w-full transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 rounded-xl p-2 ring-1 ring-inset lg:-m-4 lg:rounded-2xl lg:p-4 bg-gray-900/5 ring-gray-900/10"}
       = image_tag("hero.avif", loading: 'lazy', class: "w-full h-[300px] md:h-[400px]", alt: "#{t "landing.hero-1.img_alt"}")
