--- a/app/views/articles/index.turbo_stream.haml
+++ b/app/views/articles/index.turbo_stream.haml
@@ -5,9 +5,9 @@
       %a{id: dom_id(article), data: {turbo_frame: "_top"}, class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: article_path(article)}
         %div{class: "row"}
           - if article.image.attached?
-            = image_tag(article.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: article.title)
+            = image_tag(article.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: article.title)
           - else
-            = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: article.title)
+            = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: article.title)
           %div{class: "p-4 pt-2 h-auto md:h-72"}
             %p{class: "font-messiry text-xs text-end"}
               = article.created_at_field
