--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -46,9 +46,9 @@
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: service_path(service)}
         %div{class: "row"}
           - if service.image.attached?
-            = image_tag(service.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
+            = image_tag(service.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: service.title)
           - else
-            = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
+            = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: service.title)
           %div{class: "p-4 pt-2 h-auto md:min-h-[200px] md:max-h-[400px] lg:max-h-[450px] xl:max-h-[450px] 2xl:w-max-300"}
             %div{class: "mb-8"}
               %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
