--- a/app/views/shared/_3_hero_section.html.haml
+++ b/app/views/shared/_3_hero_section.html.haml
@@ -1,6 +1,6 @@
 %section{class: "py-3 sm:py-6 mt-2 sm:mt-4 md:mt-6 lg:mt-8 xl:mt-10"}
   %div{class: "mx-auto container px-6 lg:px-8"}
     %div{class: "mt-3 flow-root"}
-      %div{class: "w-full transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 rounded-xl p-2 ring-1 ring-inset lg:-m-4 lg:rounded-2xl lg:p-4 bg-gray-900/5 ring-gray-900/10"}
+      %div{class: "w-full transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 rounded-xl p-2 ring-1 ring-inset lg:-m-4 lg:rounded-2xl lg:p-4 bg-gray-900/5 ring-gray-900/10"}
         = image_tag("hero-2.avif", loading: 'lazy', class: "w-full h-[200px] md:h-[400px]", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
 
