--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -3,5 +3,9 @@
     %div{class: "text-sm text-gray-600"}
       Copyright © 2022-#{Date.today.strftime('%Y')}
       = link_to "#{t ("footer")}", root_path, class: "px-2"
+      = link_to "https://facebook.com/druzhba.biz.ua", target: "_blank", class: "text-blue-500 mx-1" do
+        %i{class: "fa-brands fa-facebook"}
+      = link_to "https://www.instagram.com/pismenenkoborshchova", target: "_blank", class: "text-orange-500 mx-1" do
+        %i{class: "fa-brands fa-instagram"}
     %div{class: "text-sm text-gray-600 md:ml-auto justify-content-center align-items-center"}
       %a{href: "mailto:admin@druzhba.biz.ua"} admin@druzhba.biz.ua
