--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -75,8 +75,9 @@
           fbq('init', '1562402937679169');
           fbq('track', 'PageView');
     %noscript
-      %img{height: "1", src: "https://www.facebook.com/tr?id=1562402937679169&ev=PageView&noscript=1",
-          style: "display:none", width: "1"}
+      %img{height: "1", width: "1",
+          src: "https://www.facebook.com/tr?id=1562402937679169&ev=PageView&noscript=1",
+          style: "display:none"}
   
   
   %body{class: "bg-stone-100", id: "main", "data-controller": "landing--index"}
