--- a/app/views/admin/money_flow_categories/_show_content.html.haml
+++ b/app/views/admin/money_flow_categories/_show_content.html.haml
@@ -2,18 +2,18 @@
   .list-group-item
     .row
       .col-md-3
-        .text-muted.fw-bold= money_flow_category.class.human_attribute_name(:title)
+        .text-muted.fw-bold= expense_category.class.human_attribute_name(:title)
       .col-md-9
-        = money_flow_category.title
+        = expense_category.title
   .list-group-item
     .row
       .col-md-3
-        .text-muted.fw-bold= money_flow_category.class.human_attribute_name(:description)
+        .text-muted.fw-bold= expense_category.class.human_attribute_name(:description)
       .col-md-9
-        = money_flow_category.description
+        = expense_category.description
   .list-group-item
     .row
       .col-md-3
-        .text-muted.fw-bold= money_flow_category.class.human_attribute_name(:flow)
+        .text-muted.fw-bold= expense_category.class.human_attribute_name(:flow)
       .col-md-9
-        = render Admin::BadgeComponent.new(money_flow_category.flow_i18n, money_flow_category.flow_color)
+        = render Admin::BadgeComponent.new(expense_category.flow_i18n, expense_category.flow_color)
