--- a/app/views/admin/money_flow_categories/_form.html.haml
+++ b/app/views/admin/money_flow_categories/_form.html.haml
@@ -4,4 +4,4 @@
   .list-group-item
     = render Admin::FieldsetComponent.new(form, :description, :text, required: true)
   .list-group-item
-    = render Admin::FieldsetComponent.new(form, :flow, :radio, required: true, list: Admin::MoneyFlowCategory.flows_i18n.invert)
+    = render Admin::FieldsetComponent.new(form, :flow, :radio, required: true, list: Admin::ExpenseCategory.flows_i18n.invert)
