--- a/app/views/admin/money_flow_categories/index.html+turbo_frame.haml
+++ b/app/views/admin/money_flow_categories/index.html+turbo_frame.haml
@@ -4,35 +4,35 @@
     = modal.with_body do
       .modal-body
         .mb-3
-          = form_with model: Admin::CustomerSearchForm.new, url: admin_money_flow_categories_path, method: :get,
+          = form_with model: Admin::CustomerSearchForm.new, url: admin_expense_categories_path, method: :get,
             scope: 'search', data: { turbo_frame: 'association_search_body' } do |form|
             .row.gy-3.align-items-end
               .col-lg-6.col-xl-4
                 = render Admin::FieldsetComponent.new(form, :id_eq, :text, alignment: false, 
-                  label: Admin::MoneyFlowCategory.human_attribute_name(:id), placeholder: '=')
+                  label: Admin::ExpenseCategory.human_attribute_name(:id), placeholder: '=')
               .col-lg-6.col-xl-4
                 = hidden_field_tag :name_field, params[:name_field]
                 = form.submit t('infold.operation.search'), class: 'btn btn-primary'
         = turbo_frame_tag 'association_search_body' do
-          - if @money_flow_categories.blank?
+          - if @expense_categories.blank?
             .alert= t('infold.no_data')
           - else
             .table_wrapper.table-responsive.bg-white.border.mb-3
               %table.table.table-striped.table-hover
                 %thead
                   %tr
-                    %th= Admin::MoneyFlowCategory.human_attribute_name(:id)
-                    %th= Admin::MoneyFlowCategory.human_attribute_name(:title)
+                    %th= Admin::ExpenseCategory.human_attribute_name(:id)
+                    %th= Admin::ExpenseCategory.human_attribute_name(:title)
                     %th
                 %tbody
-                  - @money_flow_categories.each do |money_flow_category|
+                  - @expense_categories.each do |expense_category|
                     %tr
                       %td
-                        = money_flow_category.id
+                        = expense_category.id
                       %td
-                        = money_flow_category.title
+                        = expense_category.title
                       %td.icon_cell
                         %a{ href: '#', data: { action: "relation-search#select remote-modal#close",
-                          id: money_flow_category.id, name: money_flow_category.read_attribute(params[:name_field]) } }
+                          id: expense_category.id, name: expense_category.read_attribute(params[:name_field]) } }
                           %i.bi.bi-check2-square.h3
-            = paginate(@money_flow_categories, views_prefix: "admin")
+            = paginate(@expense_categories, views_prefix: "admin")
