--- a/app/views/admin/money_flow_categories/show.html+turbo_frame.haml
+++ b/app/views/admin/money_flow_categories/show.html+turbo_frame.haml
@@ -1,3 +1,3 @@
 = turbo_frame_tag(admin_remote_modal_id) do
   = render Admin::RemoteModalComponent.new(admin_remote_modal_id) do |modal|
-    = render 'show_wrapper', modal: modal, money_flow_category: @money_flow_category
+    = render 'show_wrapper', modal: modal, expense_category: @expense_category
