--- a/app/views/admin/money_flows/_form_money_flow_detail.html.haml
+++ b/app/views/admin/money_flows/_form_money_flow_detail.html.haml
@@ -1,6 +1,6 @@
 %tr.nested-fields{ class: "#{'d-none' if form.object._destroy}", data: { new_record: form.object.new_record? } }
   %td.nested_form
-    = render Admin::FieldsetComponent.new(form, :money_flow_category_id, :association_search, required: true, no_label: true, association_name: :money_flow_category, search_path: admin_money_flow_categories_path(name_field: :title), name_field: :money_flow_category_title)
+    = render Admin::FieldsetComponent.new(form, :expense_category_id, :association_search, required: true, no_label: true, association_name: :expense_category, search_path: admin_expense_categories_path(name_field: :title), name_field: :expense_category_title)
   %td.nested_form
     = render Admin::FieldsetComponent.new(form, :amount, :text, no_label: true)
   %td.icon_cell
