--- a/app/views/admin/money_flows/_show_content.html.haml
+++ b/app/views/admin/money_flows/_show_content.html.haml
@@ -2,37 +2,37 @@
   .list-group-item
     .row
       .col-md-3
-        .text-muted.fw-bold= money_flow.class.human_attribute_name(:id)
+        .text-muted.fw-bold= expense.class.human_attribute_name(:id)
       .col-md-9
-        = money_flow.id
+        = expense.id
   .list-group-item
     .row
       .col-md-3
-        .text-muted.fw-bold= money_flow.class.human_attribute_name(:admin_user_id)
+        .text-muted.fw-bold= expense.class.human_attribute_name(:admin_user_id)
       .col-md-9
-        = link_to money_flow.admin_user.name, admin_admin_user_path(money_flow.admin_user), data: { turbo_frame: 'modal_sub' } if money_flow.admin_user
+        = link_to expense.admin_user.name, admin_admin_user_path(expense.admin_user), data: { turbo_frame: 'modal_sub' } if expense.admin_user
   .list-group-item
     .row
       .col-md-3
-        .text-muted.fw-bold= money_flow.class.human_attribute_name(:description)
+        .text-muted.fw-bold= expense.class.human_attribute_name(:description)
       .col-md-9
-        = money_flow.description
+        = expense.description
   .list-group-item
     .row
       .col-md-3
-        .text-muted.fw-bold= money_flow.class.human_attribute_name(:total_amount)
+        .text-muted.fw-bold= expense.class.human_attribute_name(:total_amount)
       .col-md-9
-        = money_flow.total_amount
+        = expense.total_amount
   .list-group-item
     .row
       .col-md-3
-        .text-muted.fw-bold= money_flow.class.human_attribute_name(:order_id)
+        .text-muted.fw-bold= expense.class.human_attribute_name(:order_id)
       .col-md-9
-        = money_flow.order_id
+        = expense.order_id
 .card.mb-3
   .card-header
-    %h4.text-muted.mb-0= Admin::MoneyFlowDetail.model_name.human
-  - if money_flow.money_flow_details.blank?
+    %h4.text-muted.mb-0= Admin::ExpenseDetail.model_name.human
+  - if expense.expense_details.blank?
     .card-body
       .alert= t('infold.no_data')
   - else
@@ -40,12 +40,12 @@
       %table.table.table-hover.card-table
         %thead
           %tr
-            %th= Admin::MoneyFlowDetail.human_attribute_name(:money_flow_category_id)
-            %th= Admin::MoneyFlowDetail.human_attribute_name(:amount)
+            %th= Admin::ExpenseDetail.human_attribute_name(:expense_category_id)
+            %th= Admin::ExpenseDetail.human_attribute_name(:amount)
         %tbody
-          - money_flow.money_flow_details.each do |money_flow_detail|
+          - expense.expense_details.each do |expense_detail|
             %tr
               %td
-                = link_to money_flow_detail.money_flow_category.title, admin_money_flow_category_path(money_flow_detail.money_flow_category), data: { turbo_frame: 'modal_sub' } if money_flow_detail.money_flow_category
+                = link_to expense_detail.expense_category.title, admin_expense_category_path(expense_detail.expense_category), data: { turbo_frame: 'modal_sub' } if expense_detail.expense_category
               %td
-                = money_flow_detail.amount
+                = expense_detail.amount
