--- a/app/views/admin/money_flows/edit.html+turbo_frame.haml
+++ b/app/views/admin/money_flows/edit.html+turbo_frame.haml
@@ -1,10 +1,10 @@
 = turbo_frame_tag("modal_main") do
-  = form_with model: @money_flow do |form|
+  = form_with model: @expense do |form|
     = render Admin::RemoteModalComponent.new(backdrop: :static) do |modal|
       = modal.with_header do
         %ol.breadcrumb.text-dark
           %li.breadcrumb-item Надходження (витрати)
-          %li.breadcrumb-item.active= "#{t('infold.operation.edit')} ##{@money_flow.id}"
+          %li.breadcrumb-item.active= "#{t('infold.operation.edit')} ##{@expense.id}"
       = modal.with_body do
         .modal-body#form_body
           = render "form", form: form
