--- a/app/views/admin/money_flows/form.turbo_stream.haml
+++ b/app/views/admin/money_flows/form.turbo_stream.haml
@@ -1,16 +1,16 @@
-- if @money_flow.invalid?
+- if @expense.invalid?
   = turbo_stream.update "form_body" do
-    = fields_for @money_flow do |form|
+    = fields_for @expense do |form|
       = render "form", form: form
 - else
   = turbo_stream.update "modal_main" do
     = render Admin::RemoteModalComponent.new do |modal|
-      = render 'show_wrapper', modal: modal, money_flow: @money_flow
+      = render 'show_wrapper', modal: modal, expense: @expense
   - if action_name == "create"
-    = turbo_stream.prepend "money_flows" do
-      = render 'index_row', money_flow: @money_flow
+    = turbo_stream.prepend "expenses" do
+      = render 'index_row', expense: @expense
     = turbo_stream.remove "no_data"
   - else
-    = turbo_stream.replace @money_flow do
-      = render 'index_row', money_flow: @money_flow
+    = turbo_stream.replace @expense do
+      = render 'index_row', expense: @expense
 = admin_turbo_stream_flash
