--- a/app/views/admin/money_flows/new.html+turbo_frame.haml
+++ b/app/views/admin/money_flows/new.html+turbo_frame.haml
@@ -1,5 +1,5 @@
 = turbo_frame_tag("modal_main") do
-  = form_with model: @money_flow do |form|
+  = form_with model: @expense do |form|
     = render Admin::RemoteModalComponent.new(backdrop: :static) do |modal|
       = modal.with_header do
         %ol.breadcrumb.text-dark
