--- a/app/views/admin/common/_header_menu.html.haml
+++ b/app/views/admin/common/_header_menu.html.haml
@@ -6,6 +6,6 @@
   %li.nav-item
     = link_to 'Замовлення', admin_orders_path, class: 'nav-link fs-3'
   %li.nav-item
-    = link_to 'Кошти', admin_expenses_path, class: 'nav-link fs-3'
+    = link_to 'Витрати', admin_expenses_path, class: 'nav-link fs-3'
   %li.nav-item
     = link_to 'Категорія доходів (витрат)', admin_expense_categories_path, class: 'nav-link'
