--- a/app/views/admin/dashboard/index.html.haml
+++ b/app/views/admin/dashboard/index.html.haml
@@ -8,3 +8,44 @@
   %div{class: "col-12 col-md-4 bg-info"} &nbsp
   %div{class: "col-12 col-md-4 bg-purple"} &nbsp
   %div{class: "col-12 col-md-4 bg-warning"} &nbsp
+
+
+
+%h1 Аналитика денежных потоков
+
+= form_tag admin_root_path, method: :get do
+  = label_tag :start_date, "Начальная дата:"
+  = date_field_tag :start_date, @start_date
+  = label_tag :end_date, "Конечная дата:"
+  = date_field_tag :end_date, @end_date
+  = submit_tag "Применить"
+
+%h2 Движение денежных средств
+= line_chart @cash_flow, xtitle: "Дата", ytitle: "Сумма (USD)", colors: ["#4CAF50"]
+
+%h2 Доходы и расходы
+= line_chart [{name: "Доходы", data: @revenue}, {name: "Расходы", data: @expenses.map { |k, v| [k, -v] }}], xtitle: "Дата", ytitle: "Сумма (USD)"
+
+%h2 Топ-5 категорий расходов
+= pie_chart @top_expense_categories
+
+%h2 Дебиторская задолженность
+= area_chart @accounts_receivable, xtitle: "Дата", ytitle: "Сумма (USD)", colors: ["#2196F3"]
+
+%h2 Сводка
+%table
+  %tr
+    %th Показатель
+    %th Сумма (USD)
+  %tr
+    %td Общий доход
+    %td= number_to_currency(@revenue.values.sum / 100.0)
+  %tr
+    %td Общие расходы
+    %td= number_to_currency(@expenses.values.sum / 100.0)
+  %tr
+    %td Чистый денежный поток
+    %td= number_to_currency((@revenue.values.sum - @expenses.values.sum) / 100.0)
+  %tr
+    %td Текущая дебиторская задолженность
+    %td= number_to_currency(@accounts_receivable.values.sum / 100.0)
