--- a/app/views/admin/expense_categories/_show_wrapper.html.haml
+++ b/app/views/admin/expense_categories/_show_wrapper.html.haml
@@ -1,6 +1,6 @@
 = modal.with_header do
   %ol.breadcrumb.text-dark
-    %li.breadcrumb-item Категорія доходів (витрат)
+    %li.breadcrumb-item Категорія витрат
     %li.breadcrumb-item.active= "#{t('infold.operation.show')} ##{expense_category.id}"
 = modal.with_body do
   .modal-body
