--- a/app/views/admin/expense_categories/index.html+turbo_frame.haml
+++ b/app/views/admin/expense_categories/index.html+turbo_frame.haml
@@ -1,6 +1,6 @@
 = turbo_frame_tag(admin_remote_modal_id) do
   = render Admin::RemoteModalComponent.new('modal_sub') do |modal|
-    = modal.with_header { 'Категорія доходів (витрат)' }
+    = modal.with_header { 'Категорія витрат' }
     = modal.with_body do
       .modal-body
         .mb-3
