--- a/app/views/admin/expense_categories/index.html.haml
+++ b/app/views/admin/expense_categories/index.html.haml
@@ -1,7 +1,7 @@
 %nav.navbar.navbar-light
   .container-fluid
     %ol.breadcrumb
-      %li.breadcrumb-item.active Категорія доходів (витрат)
+      %li.breadcrumb-item.active Категорія витрат
     .ms-auto
       = link_to t('infold.operation.new'), new_admin_expense_category_path, class: 'btn btn-warning', data: { turbo_frame: "modal_main" }
 #index_page.d-md-flex{ data: { controller: 'index-page', index_page_target: 'wrapper' } }
@@ -11,8 +11,8 @@
       = form.hidden_field :sort_field, data: { index_page_target: 'sortField' }
       = form.hidden_field :sort_kind, data: { index_page_target: 'sortKind' }
       .mb-3
-        = render Admin::FieldsetComponent.new(form, :title_full_like, :text, alignment: false, 
-          label: Admin::ExpenseCategory.human_attribute_name(:title), placeholder: 'like %...%')
+        = render Admin::FieldsetComponent.new(form, :id_eq, :text, alignment: false, 
+          label: Admin::ExpenseCategory.human_attribute_name(:id), placeholder: '=')
       %hr.my-3
       .row.gx-2
         .col-6.order-2.d-grid
@@ -24,7 +24,7 @@
       .alert#no_data= t('infold.no_data')
     .card.border-top-0
       .table_wrapper.table-responsive.bg-secondary-lt{ data: { index_page_target: 'resultTableWrapper' } }
-        %table.table.table-hover.table-striped.mb-0.bg-white
+        %table.table-sm.table.table-hover.table-striped.mb-0.bg-white
           %thead{ data: { index_page_target: 'thead' } }
             %tr
               %th.icon_cell
