--- a/app/views/admin/common/_header_menu.html.haml
+++ b/app/views/admin/common/_header_menu.html.haml
@@ -7,3 +7,5 @@
     = link_to 'Замовлення', admin_orders_path, class: 'nav-link fs-3'
   %li.nav-item
     = link_to 'Витрати', admin_expenses_path, class: 'nav-link fs-3'
+  %li.nav-item
+    = link_to 'Замовники', admin_customers_path, class: 'nav-link'
