--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,3 +1,5 @@
+= @schema
+
 = turbo_frame_tag dom_id(@article), src: article_path(@article) do
   %div{id: "article_skeleton"}
     %div{class: "min-h-screen bg-white mt-12"}
