--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -1,6 +1,6 @@
 @import "actiontext.css";
-/* @import 'bootstrap/scss/bootstrap';
-*/
+@import 'bootstrap/scss/bootstrap';
+
 a {
     text-decoration: none !important;
 }
