--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -1,5 +1,5 @@
-@import "actiontext.css";
-@import 'bootstrap/scss/bootstrap';
+@import 'actiontext.css';
+@import 'bootstrap';
 
 a {
     text-decoration: none !important;
