--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,13 +34,12 @@
     = stylesheet_link_tag "custom", "data-turbo-track": "reload"
     = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true, async: ""
 
+    %script#CookieDeclaration{src: "https://consent.cookiebot.com/b96db7a3-49c9-4675-a08d-7f34dbddfb4e/cd.js", type: "text/javascript"}
     %script{async: "", "data-turbo-track": "reload", src: "https://www.googletagmanager.com/gtag/js?id=G-B1HN94WVHN"}
     :javascript
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments)};
       gtag('js', new Date());
-      //gtag('config', 'GTM-TJBHGWFJ');
-      //gtag('config', 'G-B1HN94WVHN');
       gtag('config', 'GTM-TJBHGWFJ', {
           'cookie_prefix': 'druzhba.biz.ua',
           'cookie_domain': 'druzhba.biz.ua',
