--- a/app/views/shared/_cookies_bar.html.haml
+++ b/app/views/shared/_cookies_bar.html.haml
@@ -1,4 +1,4 @@
-%div{class: "cookies-bar fixed bottom-0 p-6 w-full flex justify-center z-[2000]"}
+%div{id: "cookies-bar", class: "cookies-bar fixed bottom-0 p-6 w-full flex justify-center z-[2000]"}
   %div{class: "bg-white bg-opacity-95 text-xs rounded-md fade show w-[1200px]"}
     %div{class: "p-4 flex items-center justify-between px-6 rounded border border-green-700"}
       %p
