--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -52,7 +52,8 @@
     = render "shared/contact_form"
 
     -# Cookies bar
-    = render "shared/cookies_bar" if cookies[:allow_cookies].blank?
+    - if cookies[:allow_cookies].blank?
+      = render "shared/cookies_bar"
 
     -# Scroll to Top button
     %div{class: "fixed bottom-10 end-10"}
